# PSL

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/: package-lock.json  package.json  seed-test-data.sql
backend/src/: app.module.ts  data-source.ts
backend/src/auth/: auth.module.ts
backend/src/games/: game.entity.ts  games.controller.ts  (+1 more)
bot/: .env.example  Dockerfile.dev  package-lock.json  package.json
bot/src/: deploy-commands.ts  index.ts
csrss-scanner/: build.bat  csrss_scanner.cpp
deploy/: Caddyfile  README.md  deploy.sh  inventory.ini  nginx.conf  playbook.yml  push-bot.sh  push-server.sh  push-website.sh  push.sh  setup-server.sh
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend-temp/: package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.scss
pfps/: pirate.avif
relvic/: package-lock.json  package.json
relvic/src/: index.html  main.ts
services/app/: .env.example  .gitignore  DISCORD_INTEGRATION.md  DISCORD_OAUTH_SETUP.md  README.md  pubspec.yaml  scan_directory.py
services/app/native/anticheat/: CMakeLists.txt
services/app/native/anticheat/src/: detection.cpp  detection.h
services/botzei/: Dockerfile  package-lock.json  package.json
services/server/: .env.example  Dockerfile  Dockerfile.dev  jest.config.cjs  package-lock.json  package.json  seed-test-data.sql  tsconfig.json
services/website/: angular.json  nginx.conf  package-lock.json  package.json
(+361 files in other folders)
